ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: microservice-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-microservice-service
            port:
              number: 8080
